fix(styles): Improve spacing and font size on index

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -1,9 +1,24 @@
 .article {
   @include stack(.5rem);
 
+  &__heading {
+    font-weight: bold;
+    line-height: 1.2;
+    display: block;
+
+    // We need that br for the HTML-only version to look nice, but since
+    // this is display: block; we don't wnat to render it with CSS.
+    + br {
+      display: none;
+    }
+  }
+
   &__byline {
     color: $color-light;
     font-size: $font-size-small;
+    display: block;
+    line-height: 1;
+    margin-top: .25rem;
 
     @media (prefers-color-scheme: dark) {
       color: $color-dark-light;
