--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -212,7 +212,7 @@ main {
   margin: 2rem 0;
 
   &__column {
-    @include stack(.5rem);
+    @include stack(.75rem);
   }
 
   @media (max-width: $index-width) {
@@ -239,7 +239,7 @@ main {
   max-width: $page-width;
 
   &__heading {
-    font-size: $font-size-larger;
+    font-size: $font-size-hero;
   }
 
   &__subheading {
