--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -3,10 +3,10 @@ $page-width: 640px;
 
 $font-size: 110%;
 // Typescale: 1.250 Major Third
-$font-size-hero: 2.441rem;
-$font-size-larger: 1.953rem;
-$font-size-large: 1.25rem;
-$font-size-small: 0.8rem;
+$font-size-hero: 1.728rem;
+$font-size-larger: 1.2rem;
+$font-size-large: 1.25em;
+$font-size-small: 0.833rem;
 
 $color-bg: #f5f5f5;
 $color-fg: #333;
